Update android update playstore.yml

--- a/.github/workflows/android update playstore.yml
+++ b/.github/workflows/android update playstore.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Grant rights
         run: chmod +x build.gradle
+        
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         id: build
